<resources>
    <string name="app_name">Kvíz pro jazyk C</string>
    <string name="zacitHru">Začít hrát</string>
    <string name="uroven">LEHKÁ</string>
    <string name="obrazekText">Programátorský kvíz</string>
    <string name="zebricek">Žebříček</string>
    <string name="nastaveni">Nastavení</string>
    <string name="odpoved_a">Odpoved A</string>
    <string name="odpoved_b">Odpoved B</string>
    <string name="odpoved_c">Odpoved C</string>
    <string name="odpoved_d">Odpoved D</string>
    <string name="skoreVeHre">0</string>
    <string name="pocetOtazek">1/5</string>
    <string name="zadaniOtazky">Otazka</string>
    <string name="nejSkore">NEJLEPŠÍ SKÓRE</string>
    <string name="konecneSkore">Skóre : 0</string>
    <string name="konecnyPocOtazek">Správně : 0/30</string>
    <string name="novaHra">HRÁT ZNOVU</string>
    <string name="skoreHrace">500</string>
    <string name="medaile">Medaile</string>
    <string name="zpetMenu">Zpátky do menu</string>
    <string name="smazZebricek">Smazat žebříček</string>
    <string name="pridatSkore">Přidat skóre z XML</string>
    <string name="nocniPozadi">Noční pozadí</string>
    <string name="pozadi">pozadi</string>
    <string name="zapnuto">Zapnuto</string>
    <string name="vypnuto">Vypnuto</string>
</resources>